\_________________________________________________________________/

2007-09-02 Benedikt Heintel
	- GUI:
		* Fixed #625: Error in SQL syntax on Admin Log -> Page 2

2007-09-01 Raphael Geissert
    - CONFIGS:
        * Fixed #623: open_basedir restriction in effect. File(/var/log/chkrootkit.log) is not within the allowed path(s)
    - GUI:
        * Fixed #624: welcome mail contains html entities

2007-09-01 Raphael Geissert
    - GUI:
        * Fixed some drawn backs in previous revisions
        * Added support for multiple anti-rootkit tools (including colouring for chkrootkit-like logs)
        * Correctly fixed #619
        * Fixed #621: database name being escaped with single quote in include/i18n.php
        * Fixed an error where mount points with special characters where converted to IDN format
    - CONFIGS:
        * Removed cron.d/ispcp.phptemp (merged into cron.d/ispcp)
        * Fixed error when restarting ispCP services when they were not already running
        * Awstats entry in cron.d/ispcp is not built into ispcp-setup anymore
        * Partially updated fedora's, redhat's and suse10's config files
    - LANGUAGES:
        * Updated cs_CS translation (thanks to Josef Pinc)

2007-09-01 Benedikt Heintel
	- GUI:
		* Fixed #5: admin cannot update some reseller-settings
		* Fixed #601: change client details
		* Fixed #612: Edit reseller - Max domain count error and some others
		* Fixed #619: Can't "change" into reseller or customer mode
		* Changed: Behavior on managing resellers (as admin) and users (as admin/reseller)
		* Changed: "Change" renamed to "Switch"
		* Changed: not displayed line breaks in strings
		* Changed: more than one error shown at edit domain (reseller) if there are more

2007-08-31 Benedikt Heintel
	- GUI:
		* Fixed #602: changed favicon.ico
		* Fixed #614: no gender in new user as a reseller
		* Fixed #618: Messages after add/edit things in green and not red

2007-08-31 Malte Geierhos
    - GUI: